<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/smart_home"
        android:src="@drawable/page_background_color"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true" />

    <!-- Overlay Background View -->

    <!-- Toolbar -->

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f2f2" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/lightWhite"
        android:elevation="8dp"
        android:padding="10dp"
        android:theme="@style/Theme.Design.Light.NoActionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:orientation="vertical">

            <!-- App Logo -->
            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_app_logo"
                android:contentDescription="@string/app_logo"
                android:layout_gravity="center_horizontal" />

            <!-- App Name -->
            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="-2dp"
                android:gravity="center"
                android:text="@string/netg"
                android:textColor="#000"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <!-- Logout Button -->
        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:text="@string/logout"
            android:textColor="#FBFBFB"
            android:textSize="16sp" />

        <!-- Bluetooth Icon -->
        <ImageView
            android:id="@+id/bluetoothIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/bluetooth_icon"
            android:src="@drawable/ic_bluetooth"
            android:layout_marginEnd="30dp" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/introductionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="Welcome to Smart Home Control"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        tools:ignore="HardcodedText" />

    <!-- Details Text -->
    <TextView
        android:id="@+id/detailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/introductionText"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="Control your lights and devices from anywhere!"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        tools:ignore="HardcodedText" />

    <!-- Centered ImageView -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_below="@id/detailsText"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/front_page_image"
        android:elevation="6dp"
        android:scaleType="centerCrop" />

    <!-- Two Buttons (Left & Right) -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp">

        <!-- Control Button (Left Side) -->
        <Button
            android:id="@+id/goToLightControl1"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:background="@drawable/button_background"
            android:backgroundTint="#880066"
            android:text="Control"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:iconTint="#4CAF50"
            tools:ignore="ButtonStyle,HardcodedText" />

        <!-- Bluetooth Connect Button (Right Side) -->
        <Button
            android:id="@+id/bluetoothConnectButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/goToLightControl1"
            android:background="@drawable/button_background"
            android:backgroundTint="#880066"
            android:text="Bluetooth Connect"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:iconTint="#4CAF50"
            tools:ignore="ButtonStyle,HardcodedText" />
    </RelativeLayout>

</RelativeLayout>
